# edgeman-poc

./: Cargo.toml  README.md
edge/: Cargo.toml
edge/src/: config.rs  fetch.rs  health.rs  main.rs  podman.rs  reconcile.rs
edgeman/: Cargo.toml
edgeman-common/: Cargo.toml
edgeman-common/src/: health.rs  pod.rs
sample/: sample.yaml
