[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
cron = "0.12.0"
edgeman-common = { version = "0.1.0", path = "../edgeman-common" }
envy = "0.4.2"
hyper = "0.14.27"
hyperlocal = "0.8.0"
nix = { version = "0.27.1", features = ["user"] }
once_cell = "1.18.0"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
stopper = "0.2.2"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
